@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-09T16:08:18Z",
+  "timestamp" : "2022-11-10T00:34:48Z",
   "count_outdated" : 658,
   "uniques_outdated" : 141,
-  "count" : 685,
-  "uniques" : 149,
+  "count" : 696,
+  "uniques" : 150,
   "views" : [
     {
       "timestamp": "2022-10-28T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ]
+    },
+    {
+      "timestamp": "2022-11-09T00:00:00Z",
+      "count": 11,
+      "count_minmax": [ 11, 11 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
