@@ -1,6 +1,6 @@
 {
-  "count": 27,
-  "uniques": 8,
+  "count": 38,
+  "uniques": 9,
   "views": [
     {
       "timestamp": "2022-10-28T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2022-11-07T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-11-09T00:00:00Z",
+      "count": 11,
+      "uniques": 1
     }
   ]
 }
